--- a/pagamento.html
+++ b/pagamento.html
@@ -96,6 +96,42 @@
     <section class="container" id="footer">
       <img src="image/logo-02.svg" alt="logo coffeespresso">
     </section>
+    <footer class="footer">
+    <section class="container" id="footer">
+      <img src="image/logo-02.svg" alt="logo coffeespresso">
+      <div class="footer__list">
+        <div class="footer__list--item">
+          <h3>Clássicos</h3>
+          <ul>
+            <li>Espresso</li>
+            <li>Americano</li>
+            <li>Cappuccino</li>
+            <li>Latte</li>
+            <li>Macchiato</li>
+            <li>Mocha</li>
+            <li>Irish Coffee</li>
+          </ul>
+        </div>
+        <div class="footer__list--item">
+          <h3>Gelados</h3>
+          <ul>
+            <li>Cold Brew</li>
+            <li>Frappuccino</li>
+            <li>Laranja e Tônica</li>
+            <li>Milk Shake</li>
+          </ul>
+        </div>
+        <div class="footer__list--item">
+          <h3>Veganos</h3>
+          <ul>
+            <li>Espresso</li>
+            <li>Americano</li>
+            <li>Cold Brew</li>
+            <li>Irish Coffee</li>
+          </ul>
+        </div>
+      </div>
+    </section>
   </footer>
 
   <script>
